--- a/src/app/features/gis/components/quotation/components/risk-section-details/risk-section-details.component.css
+++ b/src/app/features/gis/components/quotation/components/risk-section-details/risk-section-details.component.css
@@ -27,13 +27,16 @@
 #quote-input{
     border-radius: 4px;
     border: 1px solid rgba(0, 0, 0, 0.20); 
-    height:35px
+    height:35px;
+    font-size: 14px;
     /* background: #fff */
 }
 #quote-dropdown{
     border-radius: 4px;
     border: 1px solid rgba(0, 0, 0, 0.20);
     height: 20px;
+    font-size: 14px;
+
 }
 .accordion-button{
     background-color:transparent;
@@ -210,6 +213,23 @@
     background-color: aqua;
     width: 100px;
   } */
+  ::ng-deep 
+  .p-datepicker table td > span {
+    width:1.5rem;
+    height: 1.5rem;
+    font-size: 14px;
+  }
+  ::ng-deep .p-datepicker .p-datepicker-header .p-datepicker-title .p-datepicker-year {
+    font-size: 14px;
+  }
+  ::ng-deep .p-datepicker .p-datepicker-header .p-datepicker-title .p-datepicker-month{
+    font-size: 14px;
+  }
+  ::ng-deep .p-datepicker table th > span{
+    font-size: 14px;
+
+  }
+  
 
 
   
