VQ-812: Quotation summary

--- a/src/app/features/gis/components/quotation/components/quotation-details/quotation-details.component.css
+++ b/src/app/features/gis/components/quotation/components/quotation-details/quotation-details.component.css
@@ -1,5 +1,9 @@
 .title{
-    color:black
+    color: #000;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 18px; 
 }
 .title1{
     color: #000;
