--- a/src/app/features/gis/components/quotation/components/quotation-details/quotation-details.component.html
+++ b/src/app/features/gis/components/quotation/components/quotation-details/quotation-details.component.html
@@ -1,6 +1,6 @@
 <div class="mx-4 mt-3">
-    <p class="title">Quotations:Client Details </p>
-    <app-stepper [currentStep]="2" [stepperData]="steps"></app-stepper>
+    <p class="title">Quotations:Quotation Details </p>
+    <app-stepper [currentStep]="3" [stepperData]="steps"></app-stepper>
     <form [formGroup]="quotationForm">
     <div class="card mb-4">
         <div class="card-body">
