--- a/src/app/features/gis/components/quotation/components/risk-section-details/risk-section-details.component.html
+++ b/src/app/features/gis/components/quotation/components/risk-section-details/risk-section-details.component.html
@@ -1291,7 +1291,7 @@
             <button type="button" id="nextButton" class="btn btn-primary">Assign task</button>
           </div>
           <div class="col-4 d-flex justify-content-end">
-            <button type="button" id="nextButton" class="btn btn-primary">Next</button>
+            <button type="button" id="nextButton" class="btn btn-primary" (click)="finish()">Next</button>
           </div>
         </div>
       </div>
