--- a/src/app/features/lms/ind/components/quotation/components/quotation-list/quotation-list.component.html
+++ b/src/app/features/lms/ind/components/quotation/components/quotation-list/quotation-list.component.html
@@ -43,6 +43,7 @@
             <button
               type="button"
               class="btn btn-primary btn-sm" style="padding: 0.6em;"
+              [routerLink]="['/home/gis/quotation/quotations-client-details']"
             >
             <i class="fa-solid fa-plus"></i> New Quotation
             </button>
