--- a/src/app/features/gis/components/quotation/components/quotations-client-details/quotations-client-details.component.css
+++ b/src/app/features/gis/components/quotation/components/quotations-client-details/quotations-client-details.component.css
@@ -1,5 +1,9 @@
 .title{
-    color:black
+    color: #000;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 18px; 
 }
 .card{
     border-radius: 0px;
@@ -29,3 +33,16 @@ font-weight: 400;
 line-height: 24px; 
 cursor:pointer
 }
+.img_upload {
+    display: inline-block;
+    font-family: 'Roboto', serif;
+    text-align: center;
+    background-color: white;
+    color: var(--primary-color);
+    padding: 0.5rem;
+    cursor: pointer;
+    border-radius: 2px 1px 2px 2px;
+    border: 1px solid var(--primary-color);
+    
+}
+
