--- a/src/app/features/lms/grp/components/quotation/components/quick/quick.component.html
+++ b/src/app/features/lms/grp/components/quotation/components/quick/quick.component.html
@@ -5,7 +5,7 @@
   <div id="container">
     <div class="client-details">Select Client</div>
     <form class="form" [formGroup]="quickForm">
-    <div class="col-12 col-xs-12 col-sm-12 col-md-12 col-lg-12" id="#">
+    <div class="row col-12 col-xs-12 col-sm-12 col-md-12 col-lg-12" id="#">
         <div class="form-group col-md-4 col-lg-4 col-xs-12 col-sm-12">
             <div class="label"><label>Client</label></div>
             <div>
@@ -15,7 +15,23 @@
                             [filter]="true"
                             [filterBy]="'label'"
                             [dataKey]="'value'"
-                            [style]="{ width: '75%' }"
+                            [style]="{ width: '80%' }"
+                            placeholder="Select a Client"
+                            formControlName='clients' 
+                            class="select">
+                </p-dropdown>
+            </div>
+        </div>
+        <div class="form-group col-md-4 col-lg-4 col-xs-12 col-sm-12">
+            <div class="label"><label>Branch</label></div>
+            <div>
+                <p-dropdown id='value'
+                            [options]='clientList'
+                            [optionLabel]="'label'"
+                            [filter]="true"
+                            [filterBy]="'label'"
+                            [dataKey]="'value'"
+                            [style]="{ width: '80%' }"
                             placeholder="Select a Client"
                             formControlName='clients' 
                             class="select">
@@ -45,7 +61,7 @@
             <div>
                 <p-dropdown id='durationType'
                             [options]='durationType'
-                            [optionLabel]="'label'"
+                            [optionLabel]="'value'"
                             [style]="{ width: '80%' }"
                             formControlName='durationType'
                             placeholder="Select Duration type" 
@@ -58,7 +74,7 @@
             <div>
                 <p-dropdown id='facultativeType'
                             [options]='facultativeType'
-                            [optionLabel]="'label'"
+                            [optionLabel]="'value'"
                             [style]="{ width: '80%' }"
                             formControlName='facultativeType'
                             placeholder="Select Facultative Type"
@@ -73,7 +89,7 @@
             <div>
                 <p-dropdown id='quotationCovers'
                             [options]='quotationCovers'
-                            [optionLabel]="'label'"
+                            [optionLabel]="'desc'"
                             [style]="{ width: '80%' }"
                             formControlName='quotationCovers'
                             placeholder="Select Quotation Cover" 
@@ -99,7 +115,7 @@
             <div>
                 <p-dropdown id='unitRateOption'
                             [options]='unitRateOption'
-                            [optionLabel]="'label'"
+                            [optionLabel]="'name'"
                             [style]="{ width: '80%' }"
                             formControlName='unitRateOption'
                             placeholder="Select Unit rate"
@@ -188,6 +204,20 @@
               </p-dropdown>
           </div>
       </div>
+      <div class="form-group col-md-4 col-lg-4 col-xs-12 col-sm-12">
+        <div class="label"><label>Marketer</label></div>
+        <div class="ui-fluid">
+            <p-dropdown id='intermediary'
+                        [options]='products'
+                        [optionLabel]="'label'"
+                        [style]="{ width: '80%' }"
+                        formControlName='intermediary' 
+                        placeholder="Select an Intermediary"
+                        class="select"
+                        >
+            </p-dropdown>
+        </div>
+    </div>
       <div class="form-group col-md-4 col-lg-4 col-xs-12 col-sm-12">
           <div class="label"><label>Commission rate</label></div>
           <div class="form-group mx-2">
