--- a/src/app/features/crm/components/base-crm/base-crm.component.html
+++ b/src/app/features/crm/components/base-crm/base-crm.component.html
@@ -6,7 +6,49 @@
           <div class="card fixed-height-card">
             <div class="card-header bg-transparent header">Organization Setups</div>
             <div class="card-body">
+              <!-- <div class="custom-list list">
+                <div *ngFor="let item of items" (click)="toggleItem(item)" [class.active]="item.showSubItems">
+                  <a [routerLink]="item.link" *ngIf="item.link">
+                    {{ item.label }}
+                    <i *ngIf="item.showSubItems" class="fa fa-chevron-down"></i>
+                    <i *ngIf="!item.showSubItems" class="fa fa-chevron-right"></i>
+                  </a>
+                  <span *ngIf="!item.link">
+                    {{ item.label }}
+                    <i *ngIf="item.showSubItems" class="fa fa-chevron-down"></i>
+                    <i *ngIf="!item.showSubItems" class="fa fa-chevron-right"></i>
+                  </span>
+                  <ul *ngIf="item.showSubItems" class="custom-list slist">
+                    <li *ngFor="let subItem of item.subItems">
+                      <a [routerLink]="subItem.link" *ngIf="subItem.link">{{ subItem.label }}</a>
+                      <span *ngIf="!subItem.link">{{ subItem.label }}</span>
+                    </li>
+                  </ul>
+                </div>
+              </div> -->
+
               <div class="custom-list list">
+                <div *ngFor="let item of items" (click)="toggleItem(item)" [class.active]="item.showSubItems">
+                  <a [routerLink]="item.link" *ngIf="item.link">
+                    <i *ngIf="item.showSubItems" class="fa fa-chevron-down"></i>
+                    <i *ngIf="!item.showSubItems" class="fa fa-chevron-right"></i>
+                    {{ item.label }}
+                  </a>
+                  <span *ngIf="!item.link">
+                    <i *ngIf="item.showSubItems" class="fa fa-chevron-down"></i>
+                    <i *ngIf="!item.showSubItems" class="fa fa-chevron-right"></i>
+                    {{ item.label }}
+                  </span>
+                  <ul *ngIf="item.showSubItems" class="custom-list slist">
+                    <li *ngFor="let subItem of item.subItems">
+                      <a [routerLink]="subItem.link" *ngIf="subItem.link">{{ subItem.label }}</a>
+                      <span *ngIf="!subItem.link">{{ subItem.label }}</span>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+
+              <!-- <div class="custom-list list">
                 <div *ngFor="let item of items" (click)="toggleItem(item)" [class.active]="item.showSubItems">
                   <a [routerLink]="item.link" *ngIf="item.link">{{ item.label }}</a>
                   <span *ngIf="!item.link">{{ item.label }}</span>
@@ -17,7 +59,7 @@
                     </li>
                   </ul>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
