VQ-636: Organization Modification

--- a/src/app/features/crm/components/organization/organization.component.html
+++ b/src/app/features/crm/components/organization/organization.component.html
@@ -34,7 +34,7 @@
       </div>
       <div class="card mb-3">
         <div class="card-header bg-transparent float-start">
-          <span class="float-start mt-3">Country Information</span>
+          <span class="float-start mt-3">Organization Information</span>
         </div>
         <div class="card-body">
           <div class="row">
