--- a/src/app/features/lms/ind/components/quotation/components/quotation-summary/quotation-summary.component.html
+++ b/src/app/features/lms/ind/components/quotation/components/quotation-summary/quotation-summary.component.html
@@ -143,6 +143,7 @@
                       </div>
                       <div class="col-12">
                         <div
+                        routerLink="/home/lms/ind/quotation/client-details"
                           class="fs-5 d-flex justify-content-end p-2"
                           style="color: var(--primary-color)"
                         >
@@ -231,6 +232,7 @@
                   </div>
                   <div class="col-12">
                     <div
+                    routerLink="/home/lms/ind/quotation/client-details"
                       class="fs-5 d-flex justify-content-end p-2"
                       style="color: var(--primary-color)"
                     >
@@ -401,6 +403,7 @@
                   </div>
                   <div class="col-12">
                     <div
+                    routerLink="/home/lms/ind/quotation/client-details"
                       class="fs-5 d-flex justify-content-end p-2"
                       style="color: var(--primary-color)"
                     >
@@ -452,6 +455,7 @@
                     </div>
                     <div class="col-12">
                       <div
+                      routerLink="/home/lms/ind/quotation/client-details"
                         class="fs-5 d-flex justify-content-end p-2"
                         style="color: var(--primary-color)"
                       >
