--- a/src/app/features/lms/ind/components/quotation/components/personal-details/personal-details.component.css
+++ b/src/app/features/lms/ind/components/quotation/components/personal-details/personal-details.component.css
@@ -15,30 +15,10 @@ label {
   border-radius: 0px;
 }
 
-tbody > tr > td:nth-child(1) {
-  padding-right: 2rem !important  ;
-}
-
 .t_hover:hover {
   background-color: rgba(20, 48, 134, 0.782) !important;
   color: rgba(255, 255, 255, 0.782) !important;
   font-weight: 600;
-}
-tr.ng-star-inserted {
-  font-size: 12px;
-}
-
-tr.ng-star-inserted:hover {
-  border: 1px solid rgba(147, 146, 146, 0.664);
-  font-weight: 600;
-  font-size: 11px;
-  --bs-table-bg: rgba(233, 232, 232, 0.801);
-  cursor: pointer;
-}
-
-table > thead > tr > th,
-tbody {
-  border: solid 1px #e7e6e6;
 }
 
 .btn {
@@ -46,17 +26,10 @@ tbody {
   --bs-btn-padding-y: 0.375rem !important;
   --bs-btn-font-size: 0.7rem !important;
 }
-.table {
-  --bs-table-striped-bg: white !important;
-}
 
 .p-input-icon-right > .p-icon-wrapper.p-icon,
 .p-input-icon-left > i:first-of-type {
   color: #6c757d7c;
-}
-
-tbody > tr {
-  border: 1px solid rgb(187, 187, 187) !important;
 }
 
 .d-flex > .mx-2 {
@@ -77,7 +50,7 @@ tbody > tr {
 
 .justify-md {
   display: flex;
-  justify-content:flex-end;
+  justify-content: flex-end;
 }
 
 .doc-file-notif {
@@ -90,11 +63,32 @@ tbody > tr {
   justify-content: space-between;
 }
 
+.modal-content {
+  transform: translateX(-120px) !important;
+  width: 150% !important;
+
+}
+
+tr.ng-star-inserted {
+  border: 0;
+  border: solid 1px white;
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  border-bottom-color: white;
+  border-bottom: solid 1px black;
+}
+.table > :not(caption) > * > * {
+  padding: 0.7rem 0.7rem;
+}
+
+.dropdown-menu {
+  border: solid 1px gray;
+}
 @media (min-width: 768px) {
   .justify-md {
     justify-content: start;
   }
   .doc-file-notif {
-    width: 33%
+    width: 33%;
   }
 }
