--- a/src/app/features/lms/ind/components/quotation/components/quotation-list/quotation-list.component.html
+++ b/src/app/features/lms/ind/components/quotation/components/quotation-list/quotation-list.component.html
@@ -70,6 +70,18 @@
             </button>
 
           </div>
+
+          <div class="dropdown">
+            <div id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false"><i class="fa-solid fa-ellipsis-vertical"></i></div>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+          </div>
+
+
+
           <!-- Content for LMS tab goes here -->
           <div class="card">
             <div class="card-body">
@@ -111,6 +123,8 @@
                                 <div class="col-sm-12">
                                   <!-- GRRRR -->
                                     <app-dynamic-table [tableDetails]="policyDataTable"></app-dynamic-table>
+
+
 
 
                                   </div>
