--- a/src/app/features/reports-v2/create-dashboard/create-dashboard.component.css
+++ b/src/app/features/reports-v2/create-dashboard/create-dashboard.component.css
@@ -44,7 +44,7 @@
 .move {
   cursor: move;
 }
-/*.res {
+.res {
   resize: both;
   overflow: auto;
   display: flex;
@@ -54,4 +54,4 @@
 .card-body {
   flex: 1;
   overflow: auto;
-}*/
+}
